infrastructure/k8s/db-replica-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jini-db-replica-service
  namespace: jini-prod
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  selector:
    app: jini-db-replica
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jini-db-replica
  namespace: jini-prod
spec:
  serviceName: jini-db-replica-service
  replicas: 2
  selector:
    matchLabels:
      app: jini-db-replica
  template:
    metadata:
      labels:
        app: jini-db-replica
    spec:
      containers:
        - name: postgres-replica
          image: postgres:15-alpine
          volumeMounts:
            - name: pg-replica-persistent-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pg-replica-persistent-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 50Gi
